argofun/echo/echo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  annotations:
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-alt
      protocol: TCP
  selector:
    app: echo-server
